apply css to ensure that the car is able to rotate up, left, down, right. create an eventlistener that tells when the car to rotate. make sure the car faces the correct way as the user intends it when they hit the keyboard

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body class="background-gray">
-  <img src="images/f1.svg" class="shrink">
+  <img src="images/f1.svg">
+  <script src="js/data.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
